# citation

./: .gitignore  GEMINI.md  OCR_TEXT_CLEANING_INSTRUCTIONS.md  README.md  Workflow-forLLM.md  Workflow.md  citation-style.md  citation-workflow-for-LLM.md  debug_vertical.py  pyproject.toml  test_install.py  test_page_extraction.py
citation/: __init__.py  cli.py  file_converter.py.backup  form.py  main.py  main.py.backup  main.py.backup2  main.py.backup3  model.py  ocr_lang_detect.py  ocr_lang_detect.py.backup  ocr_lang_detect.py.backup2  ocr_lang_detect.py.backup3  pdfc.py  type_judge.py  utils.py  utils.py.backup  utils.py.backup2  utils.py.backup3  vertical_handler.py  vertical_handler.py.backup  vertical_llm.py  vertical_llm.py.backup
citation/core/document_type/: detector.py
citation/core/ocr/: handler.py
citation/extractors/pdf/: pdf_parser.py
citation/extractors/url/: url_parser.py
citation/extractors/video/: video_parser.py
citation/llm/models/: llm_handler.py
citation/llm/prompts/: citation_prompts.py
citation/output/formatters/: citation_formatter.py
citation/parsers/: audio_parser.py  pdf_parser.py
citation/processors/metadata/: extractor.py
citation/processors/page_analyzer/: pdf_analyzer.py
citation/schemas/citation_types/: schemas.py
citation/tests/: test_citation.py  test_pdf_parser.py
citations/: Bai-Wengu-白文固_2003_唐代僧籍管理制度.json  Bai-Wengu-白文固_2003_唐代僧籍管理制度.yaml  url_citation.json  url_citation.yaml
example/: 1983_第一卷_法藏館.md.json  2017_詩經注析_中華書局.md.json  Cheng_2017_詩經注析_中華書局.md.json  Example_Domain.md.json  _朱熹_2018_詩集傳_中華書局.md.json  bai-2003-唐代僧籍管理制度.json  example.json  takahashi-syriac.json  朱_熹_1944_四書章句集注_中華書局.md.json  莊子集釋_中華書局.md.json
examples/: test-document.txt
instructions/: pdf_workflow.md
test_output/: url_citation.json  url_citation.yaml
tests/: main.py.backup
