[project]
name = "citation"
version = "0.1.0"
description = "Extracts citations from PDF files."
authors = [
    { name = "ajia", email = "yyjfwoaini@gmail.com" }
]
dependencies = [
    "ocrmypdf>=16.10.4",
]
readme = "README.md"
requires-python = ">= 3.12"

[project.scripts]
citation = "citation.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pytest>=7.0.0",
    "pytest-cov>=2.12.1"
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["citation"]
